# AvaSystem-V1.0

./: README.md  app.py  config.py  main.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--2025-08-28-23-31-25-0000-1655-ERROR-Error-handling-request-admin-usuarios-Traceback-most-r-1756423911289_1756423911296.txt  Pasted-PROMPT-Sistema-de-Registro-de-Avalia-es-Cl-nica-TEA-Flask-HTML5-Tailwind-SQLite3-SQLiteCl-1756417966059_1756417966063.txt  Pasted-Sistema-Perfeito-de-Controle-de-Pacientes-Neuropsicol-gicos-Quero-que-voc-desenvolva-um-sistema-we-1756426250148_1756426250151.txt
instance/: app.db
models/: audit.py  database.py  evaluation.py  patient.py  procedure.py  user.py
routes/: admin.py  assistant.py  auth.py  dashboard.py  distribution.py  evaluations.py  patients.py  profile.py  reports.py
scripts/: init_db.py  seed.py
services/: ai_assistant.py
static/css/: custom.css
static/js/: app.js
templates/: base.html  dashboard.html
templates/admin/: audit.html  index.html  locations.html  specialties.html  user_form.html  users.html
templates/assistant/: chat.html  examples.html
templates/auth/: login.html
templates/distribution/: _procedure_actions.html  center.html
templates/evaluations/: detail.html  form.html  list.html
templates/patients/: detail.html  form.html  list.html
templates/profile/: change_password.html  edit.html  index.html
templates/reports/: distribution_print.html  doctors.html  index.html  specialties.html
utils/: auth.py  helpers.py
